advanced/keycloak/sources/overlay-training/postgresql-volume_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      # kubectl get storageclasses
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
