advanced/keycloak/sources/overlay-training/keycloak-ingress_patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    # certmanager.k8s.io/cluster-issuer: letsencrypt
    # kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: keycloak.cluster.mini
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: http
  tls:
  - secretName: keycloak-tls
    hosts:
    - keycloak.cluster.mini
